@@ -208,7 +208,7 @@ public class ActionInputHelperTest {
         List<ConfigDescriptionParameter> params = helper
                 .mapActionInputsToConfigDescriptionParameters(List.of(input1, input2));
         assertThat(params.size(), is(2));
-        checkParameter(params.get(0), "Boolean", ConfigDescriptionParameter.Type.BOOLEAN, PARAM_LABEL,
+        checkParameter(params.getFirst(), "Boolean", ConfigDescriptionParameter.Type.BOOLEAN, PARAM_LABEL,
                 PARAM_DESCRIPTION, true, "false", null, null, null);
         checkParameter(params.get(1), "String", ConfigDescriptionParameter.Type.TEXT, PARAM_LABEL, PARAM_DESCRIPTION,
                 false, null, null, null, null);
